"搭建基础工程"

--- a/video/config-service/src/main/resources/application.properties
+++ b/video/config-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
-spring.application.name=config-center
-
-spring.config.additional-location=
+server.port=9000
+spring.application.name=config-server
+spring.cloud.config.server.native.search-locations=classpath:/configurations
+spring.profiles.active=native
